# steward-systems-bct-llm-agent-challenge

./: .dockerignore  .env.example  .gitignore  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/agents/: recommendation_agent.py  review_simulation_agent.py
app/api/: health.py  task_a_review_simulation.py  task_b_recommendation.py
app/models/: schemas.py
app/services/: __init__.py  data_loader.py  item_profile_builder.py  nigerian_context_adapter.py  rating_prediction_service.py  recommendation_ranking_service.py  retrieval_service.py  review_generation_service.py  semantic_similarity_service.py  user_profile_builder.py
app/utils/: text_utils.py
data/processed/yelp/: README.md
data/sample/: items.json  reviews.json  users.json
docs/: demo_script.md  sample_payloads.md
evaluation/: evaluate_task_a.py  evaluate_task_b.py  human_eval_examples.json  human_eval_rubric.md  human_eval_template.csv  recommendation_eval_utils.py
evaluation/results/: ablation_summary.json  ablation_summary.md  recommendation_weight_tuning.json  task_a_results.json  task_b_results.json
frontend/: streamlit_app.py
papers/: solution_paper_draft.md  solution_paper_outline.md
scripts/: build_profiles.py  expand_phase2_sample_data.py  ingest_yelp_subset.py  prepare_data.py  run_demo_requests.py  tune_recommendation_weights.py
tests/: test_data_and_evaluation.py  test_health.py  test_semantic_similarity.py  test_task_a.py  test_task_b.py  test_yelp_ingestion.py
tests/fixtures/yelp/: review.jsonl  (+2 more)
