[project]
name = "steward-systems-bct-llm-agent-challenge"
version = "0.1.0"
description = "Nigerian-contextualised behavioural intelligence agent for review simulation and recommendation."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py311"
